cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: todo-list-app
  ports:
    - port: 3000
      targetPort: 3000
