ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-list-ingress-service
  namespace: todolist-grupo-01
spec:
  ingressClassName: nginx
  rules:
    - host: todolist-grupo-01.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cluster-ip-service
                port:
                  number: 3000
